# Argus

./: .gitignore  Makefile  README.md  build.ps1  go.mod  go.sum
cmd/agent/: main.go
cmd/server/: main.go
configs/: agent.yaml  server.yaml
docs/: API.md
internal/agent/: agent.go  agent_test.go  filetransfer.go  registry_windows.go  services.go  shell.go  sysinfo_linux.go  sysinfo_windows.go  update.go
internal/auth/: auth.go
internal/crypto/: crypto.go
internal/protocol/: protocol.go  protocol_test.go
internal/server/: alerting.go  handlers.go  metrics.go  middleware.go  notifications.go  scheduler.go  server.go  server_test.go  store.go
native/: CMakeLists.txt
native/cmake/: argus_native_config.cmake.in
native/procmgr/include/: procmgr.h
native/procmgr/src/: procmgr.cpp
native/sysinfo/include/: sysinfo.h
native/sysinfo/src/: sysinfo.cpp
native/sysinfo/test/: test_main.cpp
pkg/api/: api.go  errors.go  validators.go
pkg/config/: config.go
pkg/models/: models.go
pkg/native/: native.go
pkg/utils/: utils.go
scripts/: generate_certs.ps1  install_agent.ps1
web/static/css/: argus.css  style.css
web/static/js/: app.js  argus.js
web/templates/: index.html
